# objectstore

./: .codecov.yml  .craft.yml  .dockerignore  .env  .envrc  .gitignore  .pre-commit-config.yaml  .secret_scan_ignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.cross  Dockerfile.stresstest  README.md  crates.js  docker-entrypoint.sh  help.html  index.html  pyproject.toml  requirements-dev.txt  search-index.js  settings.html  src-files.js  warden.toml
.claude/: settings.json
.github/: CODEOWNERS
.plans/: killswitches-options-integration.md
.sqlx/: query-270d3344d0fc55c4fa32bc97d77882026371af8105ede628970a807131a13660.json  query-52f93a6666babec678cdf8eb611921189c0f160fcc28a435370355d0d1521dde.json
api/: Cargo.toml
bigtable-bench/: Cargo.toml  README.md
bigtable-bench/src/: main.rs
bulk-upload/: Cargo.toml
bulk-upload/src/: main.rs
client/: Cargo.toml
clients/: .craft.yml  CHANGELOG.md
clients/rust/: Cargo.toml  README.md
clients/rust/src/: auth.rs  batch.rs  client.rs  delete.rs  error.rs  exists.rs  get.rs  head.rs  insert.rs  key.rs  lib.rs  macros.rs  many.rs  multipart.rs  presign.rs  presigned.rs  put.rs  tests.rs  touch.rs  utils.rs
clients/rust/tests/: e2e.rs  multipart.rs
clients/rust/tests/common/: mod.rs
devenv/: config.ini  sync.py
devservices/: config.yml  run-bigtable.sh  run-minio.sh
docs/: index.html
gocd/: .gitignore  README.md  generate-pipelines.sh
migration/: Cargo.toml
objectstore/: all.html  fn.initialize_tracing.html  fn.main.html  fn.maybe_initialize_sentry.html  index.html  sidebar-items.js
objectstore-api/: Cargo.toml  build.rs
objectstore-client/: Cargo.toml  README.md
objectstore-client/src/: client.rs  get.rs  lib.rs  patch.rs  put.rs  tests.rs
objectstore-log/: Cargo.toml  build.rs
objectstore-log/src/: config.rs  lib.rs  macros.rs  subscriber.rs
objectstore-metrics/: Cargo.toml
objectstore-metrics/src/: lib.rs  mock.rs
objectstore-options/: Cargo.toml
objectstore-options/src/: lib.rs
objectstore-replica/: Cargo.toml
objectstore-replica/src/: fjallstore.rs  lib.rs
objectstore-replica/src/fjallstore/: tests.rs
objectstore-sdk/: Cargo.toml
objectstore-sdk/src/: lib.rs  tests.rs
objectstore-server/: Cargo.toml  build.rs
objectstore-server/config/: emulators.example.yaml  local.example.yaml
objectstore-server/docs/: architecture.md
objectstore-server/src/: auth.rs  authentication.rs  batch.rs  cli.rs  config.rs  endpoints.rs  error.rs  grpc.rs  healthcheck.rs  http.rs  killswitches.rs  lib.rs  main.rs  metadata.rs  multipart.rs  observability.rs  rate_limits.rs  rejection.rs  state.rs  usecases.rs
objectstore-server/src/auth/: auth_aware_service.rs  auth_context.rs  context.rs  error.rs  key_directory.rs  mod.rs  presigned.rs  service.rs  util.rs
objectstore-server/src/endpoints/: batch.rs  common.rs  deprecated.rs  health.rs  helpers.rs  keda.rs  mod.rs  multipart.rs  objects.rs  profiling.rs
objectstore-server/src/extractors/: batch.rs  body.rs  byte_range.rs  downstream_service.rs  id.rs  mod.rs  service.rs
objectstore-server/src/web/: app.rs  metrics_body.rs  middleware.rs  mod.rs  request_counter.rs  sentry_body.rs  sentry_stream.rs  server.rs
objectstore-server/tests/: limits.rs  multipart.rs  objects.rs  presigned.rs  query_auth.rs  range_requests.rs  stresstest.rs
objectstore-service/: Cargo.toml
objectstore-service/docs/: architecture.md
objectstore-service/src/: batch.rs  concurrency.rs  datamodel.rs  error.rs  gcp_auth.rs  id.rs  lib.rs  metadata.rs  multipart.rs  operation.rs  path.rs  scope.rs  secret.rs  service.rs  stream.rs  streaming.rs  tiered.rs  ttl.rs
objectstore-service/src/backend/: bigtable.rs  changelog.rs  common.rs  counting.rs  extensions.rs  gcs.rs  in_memory.rs  local_fs.rs  mod.rs  response.rs  s3_compatible.rs  testing.rs  tiered.rs
objectstore-shared/: Cargo.toml
objectstore-shared/src/: lib.rs  presign.rs
objectstore-test/: Cargo.toml
objectstore-test/config/: ed25519.private.pem  ed25519.public.pem
objectstore-test/src/: lib.rs  server.rs  token.rs  tracing.rs
objectstore-typed-options/: Cargo.toml
objectstore-typed-options-derive/: Cargo.toml
objectstore-typed-options-derive/src/: lib.rs
objectstore-typed-options/src/: lib.rs  schema.rs
objectstore-types/: Cargo.toml
objectstore-types/docs/: architecture.md
objectstore-types/src/: auth.rs  key.rs  lib.rs  metadata.rs  multipart.rs  presign.rs  range.rs  scope.rs
objectstore_api/: all.html  index.html
objectstore_client/: all.html  (+6 more)
python-objectstore-client/: README.md  pyproject.toml
python-objectstore-client/src/objectstore_client/: client.py  metadata.py  metrics.py
python-objectstore-client/tests/: test_smoke.py
server/: Cargo.toml
server/src/: api.rs  config.rs  grpc.rs  http.rs  main.rs
service/: Cargo.toml
service/.sqlx/: query-7164172dcc7008ff76bb70e2b57f96331170ebe76a013003892950ed78e023ab.json  query-940a4f83c63c73e96c0325718904c021084dfc40649711712aaadd1b655f8390.json
service/migrations/: 20250702105701_initial.sql
service/src/: datamodel.rs  lib.rs
service/src/backend/: gcs.rs  local_fs.rs  mod.rs  s3_compatible.rs
service/src/db/: blob.rs  mod.rs  part.rs  prelude.rs
stresstest/: Cargo.toml  README.md  all.html  example.yaml  fn.main.html  index.html  sidebar-items.js  struct.Args.html
stresstest/config/: example.yaml  index.html  sidebar-items.js  struct.Actions.html  struct.Config.html  struct.FileSizes.html  struct.Workload.html
stresstest/http/: index.html  sidebar-items.js  struct.HttpRemote.html
stresstest/src/: config.rs  http.rs  lib.rs  main.rs  raw_seaweed.rs  stresstest.rs  workload.rs
stresstest/stresstest/: fn.perform_stresstest.html  fn.print_metrics.html  fn.print_ops.html  fn.print_percentiles.html  fn.print_throughput.html  fn.run_workload.html  index.html  sidebar-items.js  struct.WorkloadMetrics.html
stresstest/workload/: enum.Action.html  index.html  sidebar-items.js  struct.InternalId.html  struct.Payload.html  struct.Workload.html  struct.WorkloadBuilder.html  type.ExternalId.html
(+142 files in other folders)
