[workspace]
resolver = "3"
members = ["objectstore-*", "clients/rust", "stresstest"]
default-members = ["objectstore-server"]

[profile.dev]
# Debug information slows down the build and increases caches in the
# target folder, but we don't require stack traces in most cases.
debug = false

[profile.dev-debug]
# A version of the dev profile with debug information enabled, for e.g. local
# debugging.
inherits = "dev"
debug = true

[profile.release]
# In release, however, we do want full debug information to report
# panic and error stack traces to Sentry.
debug = true
lto = "thin"

[workspace.dependencies]
objectstore-client = { path = "clients/rust" }
objectstore-server = { path = "objectstore-server" }
objectstore-service = { path = "objectstore-service" }
objectstore-test = { path = "objectstore-test" }
objectstore-types = { path = "objectstore-types", version = "0.0.11" }
stresstest = { path = "stresstest" }

anyhow = "1.0.69"
async-trait = "0.1.88"
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
merni = "0.1.3"
mimalloc = { version = "0.1.48", features = ["v3", "override"] }
rand = "0.9.1"
reqwest = { version = "0.12.22" }
sentry = { version = "0.45.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.17"
tokio = "1.47.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
