[workspace]
resolver = "3"
members = ["objectstore-*", "clients/rust", "stresstest", "bigtable-bench"]
default-members = ["objectstore-server"]

[profile.dev]
# Debug information slows down the build and increases caches in the
# target folder, but we don't require stack traces in most cases.
debug = false

[profile.dev-debug]
# A version of the dev profile with debug information enabled, for e.g. local
# debugging.
inherits = "dev"
debug = true

[profile.release]
# In release, however, we do want full debug information to report
# panic and error stack traces to Sentry.
debug = true
lto = "thin"

[workspace.dependencies]
objectstore-client = { path = "clients/rust" }
objectstore-log = { path = "objectstore-log" }
objectstore-metrics = { path = "objectstore-metrics" }
objectstore-server = { path = "objectstore-server" }
objectstore-service = { path = "objectstore-service" }
objectstore-test = { path = "objectstore-test" }
objectstore-types = { path = "objectstore-types", version = "0.1.9" }
percent-encoding = "2.3"
stresstest = { path = "stresstest" }

anyhow = "1.0.69"
async-trait = "0.1.88"
bytes = "1.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mediatype = { version = "0.21.0", features = ["serde"] }
rand = "0.9.3"
regex = "1.12.3"
# Same as default features on 0.12.x (0.13.x uses rustls by default)
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "http2", "system-proxy", "native-tls-no-alpn"] }
sentry = { version = "0.45.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.17"
tikv-jemallocator = { version = "0.6.1", features = ["background_threads", "override_allocator_on_supported_platforms"] }
tokio = "1.47.0"
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
sentry-options = "1.0.1"
