[package]
name = "bigtable-bench"
authors = ["Sentry <oss@sentry.io>"]
description = "Benchmark tool for writing objects directly to the Bigtable backend"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
objectstore-service = { workspace = true }
objectstore-types = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rustls = { workspace = true }
sketches-ddsketch = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "signal"] }
tokio-util = { workspace = true }
yansi = { workspace = true }
