[package]
name = "objectstore-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-compression = { version = "0.4.27", features = ["tokio", "zstd"] }
bytes = { workspace = true }
futures-util = { workspace = true }
objectstore-types = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
sentry = { workspace = true }

[dev-dependencies]
objectstore-server = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "full"] }
uuid = { version = "1.18.0", features = ["v7"] }
zstd = "0.13.3"
