[package]
name = "objectstore-log"
authors = ["Sentry <oss@sentry.io>"]
description = "Logging macros and subscriber initialization for Objectstore"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[features]
default = []
init = ["dep:tracing-subscriber", "dep:console"]
sentry = ["init", "dep:sentry"]

[dependencies]
anyhow = { workspace = true }
console = { workspace = true, optional = true }
sentry = { workspace = true, features = ["tracing"], optional = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
