[package]
name = "objectstore-metrics"
authors = ["Sentry <oss@sentry.io>"]
description = "Metrics macros and DogStatsD initialization for Objectstore"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
metrics = "0.24.3"
metrics-exporter-dogstatsd = "0.9.6"
objectstore-log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
