[package]
name = "objectstore-metrics"
authors = ["Sentry <oss@sentry.io>"]
description = "Metrics macros and DogStatsD initialization for Objectstore"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
metrics = { workspace = true }
metrics-exporter-dogstatsd = { workspace = true }
objectstore-log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
