[package]
name = "objectstore-server"
authors = ["Sentry <oss@sentry.io>"]
description = "Web server application of Objectstore, the Sentry object storage platform"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
anyhow = { workspace = true }
argh = "0.1.13"
async-stream = "0.3.6"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.12.2", features = ["multipart"] }
bytes = { workspace = true }
console = "0.16.1"
elegant-departure = { version = "0.3.2", features = ["tokio"] }
figment = { version = "0.10.19", features = ["env", "test", "yaml"] }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
jsonwebtoken = { workspace = true }
merni = { workspace = true }
mimalloc = { workspace = true }
mime = "0.3.17"
multer = "3.1.0"
num_cpus = "1.17.0"
objectstore-service = { workspace = true }
objectstore-types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { version = "0.23.31", default-features = false }
sentry = { workspace = true, features = [
    "tower-axum-matched-path",
    "tracing",
    "logs",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.14.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", default-features = false, features = [
    "catch-panic",
    "metrics",
    "set-header",
    "trace",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
papaya = "0.2.3"

[dev-dependencies]
nix = { version = "0.30.1", features = ["signal"] }
objectstore-test = { workspace = true }
serde_json = { workspace = true }
stresstest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "objectstore"
path = "src/main.rs"
