[package]
name = "objectstore-server"
authors = ["Sentry <oss@sentry.io>"]
description = "Web server application of Objectstore, the Sentry object storage platform"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
elegant-departure = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
globset = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
jsonwebtoken = { workspace = true }
num_cpus = { workspace = true }
objectstore-log = { workspace = true, features = ["init", "sentry"] }
objectstore-metrics = { workspace = true }
objectstore-service = { workspace = true }
objectstore-types = { workspace = true }
papaya = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
sentry = { workspace = true, features = [
    "tower-axum-matched-path",
    "tracing",
    "logs",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
nix = { workspace = true }
objectstore-test = { workspace = true }
stresstest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "objectstore"
path = "src/main.rs"
