[package]
name = "objectstore-service"
authors = ["Sentry <oss@sentry.io>"]
description = "Storage and backend logic of Objectstore, the Sentry object storage platform"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bigtable_rs = { git = "https://github.com/getsentry/bigtable_rs.git", rev = "4cb75bc5e5f87204363973f6302107768e64972e" }
chrono = "0.4"
bytes = { workspace = true }
futures-util = { workspace = true }
gcp_auth = "0.12.3"
humantime = { workspace = true }
humantime-serde = { workspace = true }
objectstore-log = { workspace = true }
objectstore-metrics = { workspace = true }
objectstore-types = { workspace = true }
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = { workspace = true }
reqwest = { workspace = true, features = [
    "hickory-dns",
    "stream",
    "multipart",
    "json",
] }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { version = "0.14.5", default-features = false }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
futures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
zstd = "0.13"
