[package]
name = "objectstore-service"
authors = ["Sentry <oss@sentry.io>"]
description = "Storage and backend logic of Objectstore, the Sentry object storage platform"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bigtable_rs = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
gcp_auth = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
objectstore-log = { workspace = true }
objectstore-metrics = { workspace = true }
objectstore-types = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["charset", "http2", "hickory-dns", "json", "multipart", "native-tls-no-alpn", "stream", "system-proxy"] }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io", "rt"] }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
futures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
zstd = { workspace = true }
