[package]
name = "objectstore-shared"
authors = ["Sentry <oss@sentry.io>"]
description = "Shared utilities for the Objectstore client and server"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = true

[dependencies]
percent-encoding = { workspace = true }
