[package]
name = "objectstore-typed-options-derive"
authors = ["Sentry <oss@sentry.io>"]
description = "Derive macro for sentry-options backed runtime configuration"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
