[package]
name = "objectstore-types"
authors = ["Sentry <oss@sentry.io>"]
description = "Shared types for the Objectstore client and server"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.0.17"
edition = "2024"
publish = true

[dependencies]
http = { workspace = true }
humantime = { workspace = true }
mediatype = "0.21.0"
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = "1"
serde_json = "1"
