[package]
name = "objectstore-types"
authors = ["Sentry <oss@sentry.io>"]
description = "Shared types for the Objectstore client and server"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.12"
edition = "2024"
publish = true

[dependencies]
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
mediatype = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
