[project]
name = "objectstore-client"
version = "0.1.0"
description = "Python client for the Sentry Objectstore service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build==0.9.3"] # must match the version specified in devenv/config.ini
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "black>=25.1.0",
    "isort>=5.13.2",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
]

[tool.mypy]
check_untyped_defs = true
no_implicit_reexport = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
enable_error_code = ["ignore-without-code", "redundant-self"]
local_partial_types = true
disallow_any_generics = true
disallow_untyped_defs = true

[tool.black]
line-length = 200
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 200
lines_between_sections = 1
