[project]
name = "objectstore-client"
version = "0.1.0"
description = "Python client for the Sentry Objectstore service"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = []

[build-system]
requires = ["uv_build==0.9.3"] # must match the version specified in devenv/config.ini and the main pyproject.toml
build-backend = "uv_build"
