[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
anyhow = "1.0.98"
argh = "0.1.13"
elegant-departure = { version = "0.3.1", features = ["tokio"] }
figment = { version = "0.10.19", features = ["env", "test", "yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
service = { path = "../service" }
tokio = { version = "1.45.1", features = ["full"] }
tonic = { version = "0.13.1" }
