[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
api = { path = "../api" }
argh = "0.1.13"
axum = "0.8.4"
elegant-departure = { version = "0.3.1", features = ["tokio"] }
figment = { version = "0.10.19", features = ["env", "test", "yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
service = { path = "../service" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.1" }
uuid = { version = "1.17.0", features = ["v4", "v7"] }
