[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
proto-codegen = { path = "../proto-codegen" }
sqlx = { version = "0.8", features = [
    "derive",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.46.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
