[package]
name = "stresstest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argh = "0.1.13"
bytes = { workspace = true }
bytesize = { version = "2.0.1", features = ["serde"] }
futures = { workspace = true }
futures-util = { workspace = true }
humantime-serde = "1.1.1"
jsonwebtoken = { workspace = true }
objectstore-client = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rand_distr = "0.5.1"
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34-deprecated"
sketches-ddsketch = "0.3.0"
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }
tokio-util = { workspace = true }
yansi = "1.0.1"
