[package]
name = "stresstest"
authors = ["Sentry <oss@sentry.io>"]
description = "Tool for generating file storage load against Objectstore servers"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
argh = "0.1.13"
bytesize = { version = "2.0.1", features = ["serde"] }
futures = { workspace = true }
humantime-serde = { workspace = true }
indicatif = "0.18.0"
mimalloc = { workspace = true }
objectstore-client = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rand_distr = "0.5.1"
serde = { workspace = true }
serde_yaml = "0.9.34-deprecated"
sketches-ddsketch = "0.3.0"
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = { workspace = true }
yansi = "1.0.1"
