[package]
name = "stresstest"
authors = ["Sentry <oss@sentry.io>"]
description = "Tool for generating file storage load against Objectstore servers"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
futures = { workspace = true }
humantime-serde = { workspace = true }
indicatif = { workspace = true }
objectstore-client = { workspace = true, features = ["multipart"] }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sketches-ddsketch = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = { workspace = true, features = ["io"] }
yansi = { workspace = true }
